--- a/package.json
+++ b/package.json
@@ -29,11 +29,17 @@
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "autoprefixer": "^10.4.7",
+    "cz-emoji": "1.3.1",
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
     "prisma": "^4.0.0",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-emoji"
+    }
   }
 }
