--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.3",
-    "@prisma/client": "^4.0.0",
+    "@prisma/client": "^4.8.0",
     "@trpc/client": "^9.25.3",
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
@@ -33,7 +33,8 @@
     "eslint": "8.18.0",
     "eslint-config-next": "12.1.6",
     "postcss": "^8.4.14",
-    "prisma": "^4.0.0",
+    "prettier": "^2.8.1",
+    "prisma": "^4.8.0",
     "tailwindcss": "^3.1.4",
     "typescript": "4.7.4"
   },
