--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
   "tabWidth": 2,
   "printWidth": 100,
   "singleQuote": false,
-  "trailingComma": "all",
+  "trailingComma": "es5",
   "bracketSameLine": true,
   "endOfLine": "auto"
 }
