--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@trpc/next": "^9.25.3",
     "@trpc/react": "^9.25.3",
     "@trpc/server": "^9.25.3",
-    "next": "12.2.0",
+    "next": "^13.1.1",
     "next-auth": "^4.7.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-query": "^3.39.1",
     "superjson": "^1.9.1",
     "zod": "^3.17.3"
@@ -31,7 +31,7 @@
     "autoprefixer": "^10.4.7",
     "cz-emoji": "1.3.1",
     "eslint": "8.18.0",
-    "eslint-config-next": "12.1.6",
+    "eslint-config-next": "^13.1.1",
     "postcss": "^8.4.14",
     "prettier": "^2.8.1",
     "prisma": "^4.8.0",
