--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,14 @@
 # testing
 /coverage
 
+# database
+/prisma/db.sqlite
+/prisma/db.sqlite-journal
+
 # next.js
 /.next/
 /out/
+next-env.d.ts
 
 # production
 /build
@@ -18,8 +23,6 @@
 # misc
 .DS_Store
 *.pem
-*.icloud
-tsconfig.ts*
 
 # debug
 npm-debug.log*
@@ -28,6 +31,7 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # local env files
+# do not commit any .env files to git, except for the .env.example file. https://create.t3.gg/en/usage/env-variables#using-environment-variables
 .env
 .env*.local
 
